# Flash-Aurora

./: .gitattributes  .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  test_env.py  test_profiling.py
aurora/: export_swin3d_block_graph.py  profiling.py  profiling_adaln.py  profiling_flash_window_attn3d.py  profiling_swin3d.py  profiling_swin3d_block.py  pyproject.toml
aurora/aurora/: __init__.py  _openmp_env.py
aurora/scripts/: bench_rollout_cuda_graph.sh  nsys_export_csv.sh  profile_aurora_nsys_pair.sh  profile_aurora_small_nsys.sh
aurora/tests/: conftest.py  test_cuda_graph.py  test_custom_op_paths.py  test_cute_window_attn.py  test_headers.py  test_inference_precision.py  test_inference_workspace_pool.py  test_lora_merge_math.py  test_perceiver_flash_attn.py  test_triton_perceiver_ln.py  test_triton_swin3d.py
benchmark/: _asset_root.py  _aurora_attn_shapes.py  _bootstrap.py  _distributed_rollout_assets.py  _distributed_rollout_ipc.py  _engine_cycle.py  _finetuned_ic.py  _latency_bench.py  _latency_tier_worker.py  _pipeline_stage_timing.py  _preset_ic.py  _pretrained_era5.py  _stage_timing.py  bench_aurora_e2e_max_batch.py  bench_aurora_finetuned_lora.py  bench_aurora_finetuned_stage_timing.py  bench_aurora_hres_lora.py  bench_aurora_hres_oom_probe.py  bench_aurora_latency_all.py  bench_aurora_precision_all.py  bench_aurora_precision_matrix.py  bench_aurora_pretrained.py  bench_aurora_pretrained_max_vram.py  bench_backbone_error_accum.py  bench_block_breakdown.py  bench_cute_real_qkv.py  bench_distributed_rollout.py  bench_engine_cycle.py  bench_engine_cycle_isolated.py  bench_perceiver_gemm_layout.py  bench_perceiver_ln_fusion.py  bench_perceiver_tflops.py  bench_pipeline_profile.py  bench_small_pretrained.py  bench_swin_block.py  bench_triton_layout.py  bench_v1_vs_v2.py  bench_window_attn.py  engine_cycle_20260623.md  engine_cycle_async_export_20260624_044140.md  (+20 more)
benchmark/results/: production_ablation1.md  production_full.md
benchmarks/: bench_window_attn.py
docs/: example_cams.ipynb  example_era5.ipynb  example_hres_0.1.ipynb  example_hres_t0.ipynb  example_scheduler.py  example_scheduler_distributed_workers.ipynb  example_scheduler_single_worker.ipynb  example_tc_tracking.ipynb  example_wave.ipynb
engine/: __init__.py  bootstrap.py
engine/core/: __init__.py  checkpoint.py  config.py  engine.py  hooks.py  hub.py  model_registry.py  netcdf_codec.py  paths.py  presets.py  redaction.py  rollout_session.py  trusted_pickle.py
engine/egress/: __init__.py  export.py  forecast_step.py  naming.py  offload.py  serialize.py
engine/ingress/: __init__.py  build_ic.py  builder.py  deserialize.py  static.py  time.py  validator.py
engine/runtime/: __init__.py  graph_pool.py
finetuning/: finetune.py
flash_aurora/: LICENSE  __init__.py  hub.py
flash_aurora/aurora/: NOTICE.md  __init__.py  batch.py  rollout.py  tracker.py
profiling/: adaln_d2.md  export_swin3d_block_graph.py  mlp_fused_ablation.md  mlp_fused_sweep.md  ops.md  ops_stress.md  profiling.py  profiling_adaln.py  profiling_swin3d.py  profiling_swin3d_block.py  swin3d.md  swin3d_baseline.md  swin3d_block.md  swin3d_compile.md  swin3d_d2d3.md  swin3d_d2d3_stress.md  swin3d_stageA_compare.md  swin3d_stageB_compare.md  swin3d_stageC_compare.md  swin3d_triton.md
scripts/: _nsys_path.sh  bench_rollout_cuda_graph.sh  clean_sys_path.py  generate_example_notebooks.py  profile_aurora_nsys_pair.sh  profile_aurora_small_nsys.sh  rewrite_imports.py  run_tests.sh
tests/: conftest.py  helpers.py  test_build_ic.py  test_cams_adapter.py  test_data_downloader.py  test_engine.py  test_engine_e2e.py  test_engine_netcdf.py  test_era5_adapter.py  test_hres_analysis_adapter.py  test_hres_t0_adapter.py  test_hub.py  test_naming.py  test_netcdf_codec.py  test_paths.py  test_presets.py  test_redaction.py  test_rollout_session.py  test_trusted_pickle.py  test_validator.py  test_wave_adapter.py
(+228 files in other folders)
