[project]
name = "flash-aurora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "einops>=0.8.2",
    # Matches vendored CuTeDSL/requirements-cu13.txt and FA4’s CUTLASS runtime pins.
    "nvidia-cutlass-dsl[cu13]==4.4.2",
    "flash-attn-4[cu13]",
    "huggingface-hub>=1.8.0",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "torch>=2.10.0",
    "triton>=3.6.0",
    "xarray",
    "ipykernel>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
download = [
    "cdsapi",
    "netcdf4",
    "gcsfs",
    "zarr",
    "ecmwf-api-client",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "aurora"]
python_files = ["test_*.py"]
markers = [
    "gpu: requires CUDA",
    "integration: requires asset_root and on-disk checkpoints",
    "engine: engine tests",
]
norecursedirs = [
    "flash-attention",
    "cutlass",
    "aurora/.venv",
    ".git",
    ".venv",
]
addopts = ["-ra"]

# Default package index only (override via env / global uv.toml if needed).
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# Use vendored FA4 under flash-attention/… so `uv sync` / `uv run` do not resolve
# flash-attn-4 from PyPI (stable 0.0.1 was yanked; registry-only resolves fail).
[tool.uv.sources]
flash-attn-4 = { path = "flash-attention/flash_attn/cute", editable = true }
