[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "flash-aurora"
version = "0.1.0"
description = "High-performance Aurora inference (model + engine)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "flash_aurora/LICENSE", "flash_aurora/aurora/LICENSE.txt"]
requires-python = ">=3.12, <3.14"
dependencies = [
    "einops>=0.8.2",
    "nvidia-cutlass-dsl[cu13]==4.5.2",
    "quack-kernels>=0.5.0,<0.5.1",
    "huggingface-hub>=1.8.0",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "tqdm>=4.67.0",
    "torch>=2.10.0",
    "triton>=3.6.0",
    "xarray",
    "netcdf4",
    "cdsapi",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.0",
]
download = [
    "gcsfs",
    "zarr",
    "ecmwf-api-client",
]
grib = [
    "cfgrib",
    "eccodes",
]

[tool.hatch.build.targets.wheel]
packages = ["flash_aurora"]

[tool.hatch.build.targets.wheel.force-include]
"flash_aurora/LICENSE" = "flash_aurora/LICENSE"
"flash_aurora/aurora/LICENSE.txt" = "flash_aurora/aurora/LICENSE.txt"
"flash_aurora/aurora/NOTICE.md" = "flash_aurora/aurora/NOTICE.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "gpu: requires CUDA",
    "integration: requires asset_root and on-disk checkpoints",
    "engine: engine tests",
]
norecursedirs = [
    "cutlass",
    ".git",
    ".venv",
]
addopts = ["-ra"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
